--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 		<div class="wrapper">
 			<div class="row" id="header">
 				<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
-				<a href="index.html"><img id="headerImage" src="Picture/Logo/Help_Logo.png" alt="Help University Logo" class="img-responsive"/></a><br>
+			</div>
+			<div class="row" id="header">
+				<div class="col-lg-offset-2 col-lg-1 col-md-offset-2 col-md-1 col-sm-offset-2 col-sm-1">
+					<a href="index.html"><img id="headerImage" src="Picture/Logo/EzCarCareLogo.png" alt="EzCarCare Logo" class="img-responsive pull-left"/></a>
+				</div>
+				<div class="col-lg-9 col-md-9 col-sm-9"><h1 id="logoTitle" style="color: #DB320E; font-weight: bold; font-style: italic">EzCarCare</h1></div>
+			</div>
+			<div class="row" id="header">
 				<div class="col-lg-offset-2 col-lg-2 col-md-offset-2 col-md-2 col-sm-offset-2 col-sm-2 visible-lg visible-md visible-sm">
 					<p id="visitorCount">Visitor Count:<br/>
 						<script type="text/javascript" src="http://services.webestools.com/cpt_visits/14398-10-5.js"></script>
