--- a/index.html
+++ b/index.html
@@ -77,32 +77,16 @@
 										<li><a href="#">Contact Us</a></li>
 									</ul>
 								</li>
-								<li class="dropdown"><a href="#">Programs</a>
+								<li class="dropdown"><a href="#">Services</a>
 									<ul class="dropdown-menu">
-										<li><a href="#">DIPLOMA</a></li>
-										<li class="dropdown-submenu"><a href="#">DEGREE </a>
-											<ul class="dropdown-menu">
-												<li><a href="#">INFORMATION TECHNOLOGY</a></li>
-												<li><a href="#">MOBILE COMPUTING </a></li>	
-												<li><a href="#">GAMES &amp; INTERACTIVE MEDIA</a></li>
-												<li><a href="#">BUSINESS INFORMATION MANAGEMENT</a></li>
-											</ul>
-										</li>
+										<li><a href="#">Repair Services</a></li>
+										<li><a href="#">Maintenance</a></li>
 									</ul>
 								</li>
-								<li class="dropdown"><a href="applicationMustLogin.html">Application</a>
-									<ul class="dropdown-menu">
-										<li><a href="#">Requirements</a></li>
-									</ul>
-								</li>
-								<li class="dropdown"><a href="event.html">Events</a>
-									<ul class="dropdown-menu">
-										<li><a href="#">Competition</a></li>
-									</ul>
-								</li>
-								<li><a href="partner.html">Partners</a></li>
-								<li><a href="#">E-Library</a></li>
-								<li><a href="#">E-Learning</a></li>
+								<li><a href="#">Place Request</a></li>
+								<li><a href="#">Pricing</a></li>
+								<li><a href="#">Partners</a></li>
+								<li><a href="#">FAQ</a></li>
 							</ul>
 						</div>
 					</div>
