--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style1.css">
 		
 		<!-- 1. Link to jQuery (1.8 or later), -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
@@ -25,7 +25,7 @@
 				<div class="col-lg-offset-2 col-lg-1 col-md-offset-2 col-md-1 col-sm-offset-2 col-sm-1">
 					<a href="index.html"><img id="headerImage" src="Picture/Logo/EzCarCareLogo.png" alt="EzCarCare Logo" class="img-responsive pull-left"/></a>
 				</div>
-				<div class="col-lg-9 col-md-9 col-sm-9"><h1 id="logoTitle" style="color: #DB320E; font-weight: bold; font-style: italic">EzCarCare</h1></div>
+				<div class="col-lg-9 col-md-9 col-sm-9"><h1 id="logoTitle">EzCarCare</h1></div>
 			</div>
 			<div class="row" id="header">
 				<div class="col-lg-offset-2 col-lg-2 col-md-offset-2 col-md-2 col-sm-offset-2 col-sm-2 visible-lg visible-md visible-sm">
