--- a/index.html
+++ b/index.html
@@ -98,90 +98,106 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-3 col-md-offset-1 col-md-3 col-sm-offset-1 col-sm-3 visible-lg visible-md visible-sm">
 					<ul class="nav nav-pills nav-stacked" id="eventlist">
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Confucian Workshop</a>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Interior</a>
 							<ul class="dropdown-menu event">
 								<li>
 									<p>
-										<b>Confucian Workshop</b>
-										<img src="Picture/Event/Confucian_1.jpg" alt="Confucian Workshop" class="img-responsive"/>
+										<b>Vehicle Interior</b>
+										<img src="Picture/servicePic/VehicleInterior.jpg" alt="VehicleInterior" class="img-responsive"/>
 									</p>
-									<p>Department of IT, HELP University, organised Game Development Workshop at Confucian 
-										High School, from January 2013 until June 2013.</p> 
-									<a href="confucion.html" class="btn btn-default pull-right">Read More</a>
-								</li>
-							</ul>
-						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Christmas Dinner 2012</a>
-							<ul class="dropdown-menu event">
-								<li>
-									<p>
-										<b>Christmas Dinner 2012</b>
-										<img src="Picture/Event/Christmas2012_1.jpg" alt="Christmas Dinner 2012" class="img-responsive"/>
-									</p>
-									<p>Department of IT, HELP University, organised a Christmas Dinner (2012) at MoMo Paradise, 
-										Kepong Manjalara (6.30pm - 10.30pm), on 14th December 2012 (Friday). </p> 
-									<a href="christmas.html" class="btn btn-default pull-right">Read More</a>
-								</li>
-							</ul>
-						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Annual Dinner 2012</a>
-							<ul class="dropdown-menu event">
-								<li>
-									<p>
-										<b>Annual Dinner 2012</b>
-										<img src="Picture/Event/AnnualDinner2012_1.jpg" alt="Annual Dinner 2012" class="img-responsive"/>
-									</p>
-									<p>Department of IT, HELP University, organised a Department of IT Annual Dinner (2012) at The Hills
-									- Damansara Height (6.30pm - 10.30pm), on 14th September 2012 (Friday). </p> 
-									<a href="annual.html" class="btn btn-default pull-right">Read More</a>
-								</li>
-							</ul>
-						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">HELP Cyber Game 2012 (HCG3)</a>
-							<ul class="dropdown-menu event">
-								<li>
-									<p>
-										<b>HELP Cyber Game 2012 (HCG3)</b>
-										<img src="Picture/Event/CyberGame2012_1.jpg" alt="HELP Cyber Game 2012 (HCG3)" class="img-responsive"/>
-									</p>
-									<p>Department of IT, HELP University, organised HELP Cyber Game 2012 (HCG3) together with C2AGE, at 
-									Tropicana City Mall (10.00am - 8.30pm), on 18th - 20th May 2012.</p> 
+									<ul>
+										<li><p>Check instruments, gauges, warning lights</p></li>
+										<li><p>Check horn</p></li>
+										<li><p>Check windscreen wipers</p></li>
+									</ul> 
 									<a href="#" class="btn btn-default pull-right">Read More</a>
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Team Building Trip (PENANG)</a>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Exterior</a>
 							<ul class="dropdown-menu event">
 								<li>
 									<p>
-										<b>Team Building Trip (PENANG)</b>
-										<img src="Picture/Event/TeamBuilding_1.jpg" alt="Team Building Trip (PENANG)" class="img-responsive"/>
+										<b>Vehicle Exterior</b>
+										<img src="Picture/servicePic/VehicleExterior.jpg" alt="VehicleExterior " class="img-responsive"/>
 									</p>
-									<p>Department of IT, HELP University, organised a Team building trip to Penang on April 2012.</p> 
+									<ul>
+										<li><p>Check exterior lights & lamps</p></li>
+									</ul> 
 									<a href="#" class="btn btn-default pull-right">Read More</a>
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">NCSM Microsite Launch</a>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the bonnet</a>
 							<ul class="dropdown-menu event">
 								<li>
 									<p>
-										<b>NCSM Microsite Launch</b>
-										<img src="Picture/Event/NCSM_1.png" alt="NCSM Microsite Launch" class="img-responsive"/>
+										<b>Under the bonnet</b>
+										<img src="Picture/servicePic/underbonet.jpg" alt="underbonet" class="img-responsive"/>
 									</p>
-									<p>National Cancer Society Malaysia Microsite Launch</p> 
+									<ul>
+										<li><p>Check battery</p></li>
+										<li><p>Check battery wiring</p></li>
+										<li><p>Test electrics (battery, alternator, starter motor)</p></li>
+									</ul> 
 									<a href="#" class="btn btn-default pull-right">Read More</a>
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">HELP TECHDAY 2012</a>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the Vehicle</a>
 							<ul class="dropdown-menu event">
 								<li>
 									<p>
-										<b>HELP TECHDAY 2012</b>
-										<img src="Picture/Event/HelpTechDay2012_1.jpg" alt="HELP TECHDAY 2012 " class="img-responsive"/>
+										<b>Under the Vehicle</b>
+										<img src="Picture/servicePic/UndertheVehicle.jpg" alt="UndertheVehicle" class="img-responsive"/>
 									</p>
-									<p>HELP TECHDAY 2012</p> 
+									<ul>
+										<li><p>Visual brake check</p></li>
+									</ul>  
+									<a href="#" class="btn btn-default pull-right">Read More</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Service Item Replacement</a>
+							<ul class="dropdown-menu event">
+								<li>
+									<p>
+										<b>Service Item Replacement</b>
+										<img src="Picture/servicePic/ServiceItemReplacement.jpg" alt="ServiceItemReplacement" class="img-responsive"/>
+									</p>
+									<ul>
+										<li><p>Replace engine oil and filter</p></li>
+										<li><p>Top up windscreen washer fluid</p></li>
+									</ul>  
+									<a href="#" class="btn btn-default pull-right">Read More</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Pre Alignment Check</a>
+							<ul class="dropdown-menu event">
+								<li>
+									<p>
+										<b>Pre Alignment Check</b>
+										<img src="Picture/servicePic/PreAlignmentCheck.png" alt="PreAlignmentCheck" class="img-responsive"/>
+									</p>
+									<ul>
+										<li><p>Check shock absorbers & springs</p></li>
+										<li><p>Full tyre inspection</p></li>
+									</ul> 
+									<a href="#" class="btn btn-default pull-right">Read More</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Final Checks</a>
+							<ul class="dropdown-menu event">
+								<li>
+									<p>
+										<b>Final Checks</b>
+										<img src="Picture/servicePic/FinalChecks.jpg" alt="FinalChecks" class="img-responsive"/>
+									</p>
+									<ul>
+										<li><p>Vehicle road test </p></li>
+									</ul> 
 									<a href="#" class="btn btn-default pull-right">Read More</a>
 								</li>
 							</ul>
