--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="col-lg-offset-2 col-lg-1 col-md-offset-2 col-md-1 col-sm-offset-2 col-sm-1">
 					<a href="index.html"><img id="headerImage" src="Picture/Logo/EzCarCareLogo.png" alt="EzCarCare Logo" class="img-responsive pull-left"/></a>
 				</div>
-				<div class="col-lg-9 col-md-9 col-sm-9"><h1 id="logoTitle">EzCarCare</h1></div>
+				<div class="col-lg-9 col-md-9 col-sm-9"><a href="index.html" id="logoTitle"><h1>EzCarCare</h1></a></div>
 			</div>
 			<div class="row" id="header">
 				<div class="col-lg-offset-2 col-lg-2 col-md-offset-2 col-md-2 col-sm-offset-2 col-sm-2 visible-lg visible-md visible-sm">
@@ -97,9 +97,9 @@
 			
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-3 col-md-offset-1 col-md-3 col-sm-offset-1 col-sm-3 visible-lg visible-md visible-sm">
-					<ul class="nav nav-pills nav-stacked" id="eventlist">
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Interior</a>
-							<ul class="dropdown-menu event">
+					<ul class="nav nav-pills nav-stacked" id="servicelist">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Interior</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Vehicle Interior</b>
@@ -114,8 +114,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Exterior</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vehicle Exterior</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Vehicle Exterior</b>
@@ -128,8 +128,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the bonnet</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the bonnet</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Under the bonnet</b>
@@ -144,8 +144,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the Vehicle</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Under the Vehicle</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Under the Vehicle</b>
@@ -158,8 +158,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Service Item Replacement</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Service Item Replacement</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Service Item Replacement</b>
@@ -173,8 +173,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Pre Alignment Check</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Pre Alignment Check</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Pre Alignment Check</b>
@@ -188,8 +188,8 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown-submenu eventmenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Final Checks</a>
-							<ul class="dropdown-menu event">
+						<li class="dropdown-submenu servicemenu"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Final Checks</a>
+							<ul class="dropdown-menu service">
 								<li>
 									<p>
 										<b>Final Checks</b>
@@ -207,11 +207,12 @@
 				
 				<div class="col-lg-offset-1 col-lg-6 col-sm-offset-1 col-sm-6 col-xs-12">
 					<div class="fotorama" data-autoplay="true" data-width="600" data-height="auto" data-loop="true">
-						<div data-img="Picture/Main_Slideshow/slide2.jpg" data-caption="Information Technology"><a href="#"></a></div>
-						<div data-img="Picture/Main_Slideshow/annualdinner.jpg" data-caption="Annual Dinner 2012"><a href="annual.html"></a></div>
-						<div data-img="Picture/Main_Slideshow/rsz_help-building-1024x662.jpg" data-caption="Help University Campus">
-							<a href="#"></a></div>
-						<div data-img="Picture/Main_Slideshow/In_class.jpg" data-caption="Lecturer and Students"><a href="#"></a></div>
+						<div data-img="Picture/mainslideshow/carservice.jpg" data-caption="Prefessional Car Service"><a href="#"></a></div>
+						<div data-img="Picture/mainslideshow/customerSatisfy.jpg" data-caption="Customer Care"><a href="#"></a></div>
+						<div data-img="Picture/mainslideshow/MobileCarrepair.jpg" data-caption="Mobile Car Repair">
+						<a href="#"></a>
+						</div>
+						<div data-img="Picture/mainslideshow/mechanicTeam.jpg" data-caption="Our Mechanic Team"><a href="#"></a></div>
 					</div>
 				</div>
 			</div>	
