update fotorama name

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								<li>
 									<p>
 										<b>Under the bonnet</b>
-										<img src="Picture/servicePic/underbonet.jpg" alt="underbonet" class="img-responsive"/>
+										<img src="Picture/servicePic/underbonet.jpg" alt="UnderBonet" class="img-responsive"/>
 									</p>
 									<ul>
 										<li><p>Check battery</p></li>
@@ -209,7 +209,7 @@
 					<div class="fotorama" data-autoplay="true" data-width="600" data-height="auto" data-loop="true">
 						<div data-img="Picture/mainslideshow/carservice.jpg" data-caption="Prefessional Car Service"><a href="#"></a></div>
 						<div data-img="Picture/mainslideshow/customerSatisfy.jpg" data-caption="Customer Care"><a href="#"></a></div>
-						<div data-img="Picture/mainslideshow/MobileCarrepair.jpg" data-caption="Mobile Car Repair">
+						<div data-img="Picture/mainslideshow/MobileCarrepair.jpg" data-caption="Flexible Car Repair">
 						<a href="#"></a>
 						</div>
 						<div data-img="Picture/mainslideshow/mechanicTeam.jpg" data-caption="Our Mechanic Team"><a href="#"></a></div>
