--- a/index.html
+++ b/index.html
@@ -220,6 +220,45 @@
 			<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
 			
 			<div class="row">
+				<div class="col-lg-offset-1 col-lg-11 col-sm-offset-1 col-sm-11 col-xs-12">
+					<h3>Our Features:</h3>
+				</div>
+				<div class="col-lg-1 col-sm-1 col-xs-12"></div>
+				<div class="col-lg-10 col-sm-10 col-xs-12">
+					<div class="row">					
+						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
+							<img src="Picture/Features/VarietyService.png" alt="Wide Variety of Services" class="img-responsive" width="100px" id="featuresImg"/>
+							<h3>Wide Variety of Services</h3>
+							<p>test test test test test test test test test test test test test test test test test test test test test </p>
+						</div>
+						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
+							<img src="Picture/Features/Rating.png" alt="5 Star Rating" class="img-responsive" width="150px" id="featuresImg"/>
+							<h3>Customer's Best Choice</h3>
+							<p>test test test test test test test test test test test test test test test test test test test test test </p>
+						</div>
+						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
+							<img src="Picture/Features/PayOnTheSpot.png" alt="Pay On The Spot" class="img-responsive" width="115px" id="featuresImg"/>
+							<h3>Pay On The Spot</h3>
+							<p>test test test test test test test test test test test test test test test test test test test test test </p>
+						</div>
+						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
+							<img src="Picture/Features/CustomerService.png" alt="Excellent Customer Service" class="img-responsive" width="110px" id="featuresImg"/>
+							<h3>We Care About Our Customer</h3>
+							<p>test test test test test test test test test test test test test test test test test test test test test </p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-1 col-sm-1 col-xs-12"></div>
+			</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			<div class="row">
 				<div class="col-lg-offset-1 col-lg-10 col-sm-offset-1 col-sm-10 col-xs-12">
 					<h3>Courses Provided:</h3>
 					<div class="panel-group" id="accordion">
