--- a/index.html
+++ b/index.html
@@ -224,25 +224,33 @@
 					<h3>Our Features:</h3>
 				</div>
 				<div class="col-lg-1 col-sm-1 col-xs-12"></div>
-				<div class="col-lg-10 col-sm-10 col-xs-12">
+				<div class="col-lg-10 col-sm-10 col-xs-12" id="features">
 					<div class="row">					
-						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
-							<img src="Picture/Features/VarietyService.png" alt="Wide Variety of Services" class="img-responsive" width="100px" id="featuresImg"/>
+						<div class="col-lg-3 col-sm-6 col-xs-12">
+							<div style="max-height: 100px">
+								<img src="Picture/Features/VarietyService.png" alt="Wide Variety of Services" class="img-responsive" id="featuresImg"/>
+							</div>
 							<h3>Wide Variety of Services</h3>
 							<p>test test test test test test test test test test test test test test test test test test test test test </p>
 						</div>
-						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
-							<img src="Picture/Features/Rating.png" alt="5 Star Rating" class="img-responsive" width="150px" id="featuresImg"/>
+						<div class="col-lg-3 col-sm-6 col-xs-12">
+							<div style="max-height: 100px">
+								<img src="Picture/Features/Rating.png" alt="5 Star Rating" class="img-responsive" id="featuresImg"/>
+							</div>
 							<h3>Customer's Best Choice</h3>
 							<p>test test test test test test test test test test test test test test test test test test test test test </p>
 						</div>
-						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
-							<img src="Picture/Features/PayOnTheSpot.png" alt="Pay On The Spot" class="img-responsive" width="115px" id="featuresImg"/>
-							<h3>Pay On The Spot</h3>
+						<div class="col-lg-3 col-sm-6 col-xs-12">
+							<div style="max-height: 100px">
+								<img src="Picture/Features/PayOnTheSpot.png" alt="Pay On The Spot" class="img-responsive" id="featuresImg"/>
+							</div>
+							<h3>Payment On The Spot</h3>
 							<p>test test test test test test test test test test test test test test test test test test test test test </p>
 						</div>
-						<div class="col-lg-3 col-sm-6 col-xs-12" id="features">
-							<img src="Picture/Features/CustomerService.png" alt="Excellent Customer Service" class="img-responsive" width="110px" id="featuresImg"/>
+						<div class="col-lg-3 col-sm-6 col-xs-12">
+							<div style="max-height: 100px">
+								<img src="Picture/Features/CustomerService.png" alt="Excellent Customer Service" class="img-responsive" id="featuresImg"/>
+							</div>
 							<h3>We Care About Our Customer</h3>
 							<p>test test test test test test test test test test test test test test test test test test test test test </p>
 						</div>
