--- a/recordService.html
+++ b/recordService.html
@@ -96,7 +96,7 @@
 			<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
 			
 			<h3 id="formHead">Record New Services</h3>
-			<form class="form-horizontal" action="applicationInput.php" method="post" enctype="multipart/form-data">
+			<form class="form-horizontal" action="serviceInput.php" method="post" enctype="multipart/form-data">
 				<fieldset>
 					<legend>New Service Details</legend>
 					<div class="container">
