solve option value problem

--- a/recordService.html
+++ b/recordService.html
@@ -119,8 +119,8 @@
 									<select class="form-control inputbar" name="serviceType" id="serviceType" required 
 										onfocus="focusing(this)" onblur="blurring(this)">
 										<option value="">--CHOOSE ONE-- </option>
-										<option value="Chinese"> Service </option>
-										<option value="Malay"> Maintenance </option>
+										<option value="Service"> Service </option>
+										<option value="Maintenance"> Maintenance </option>
 									</select>
 								</div>
 							</div>
@@ -130,8 +130,8 @@
 							<div class="form-group">
 								<label class="control-label col-lg-2 col-sm-3 col-xs-12" id="formLabel">Estimated Fees
 									<span id="required">*</span></label>
-								<div class="col-lg-4 col-sm-4 col-xs-12">
-									<input type="text" name="fees" class="form-control inputbar" id="fees" required 
+								<div class="col-lg-2 col-sm-2 col-xs-12">
+									<input type="number" name="fees" class="form-control inputbar" id="fees" required 
 										onfocus="focusing(this)" onblur="blurring(this)"/>
 								</div>
 							</div>
