--- a/recordService.html
+++ b/recordService.html
@@ -96,7 +96,7 @@
 			<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
 			
 			<h3 id="formHead">Record New Services</h3>
-			<form class="form-horizontal" action="serviceInput.php" method="post" enctype="multipart/form-data">
+			<form class="form-horizontal" action="serviceInput.php" method="post" onsubmit="return checkNumber(this)">
 				<fieldset>
 					<legend>New Service Details</legend>
 					<div class="container">
@@ -254,6 +254,17 @@
 		function blurring(x)
 		{
 			x.style.background = "white";
+		}
+		
+		function checkNumber(x)
+		{
+			var number = x.fees.value;
+			
+			if(number <=0)
+			{
+				alert("Please enter a positive number for estimated fees!");
+				return false;
+			}
 		}
 	</script>
 </html>
