--- a/adminLogin.html
+++ b/adminLogin.html
@@ -143,6 +143,7 @@
 			</form>	
 			
 			<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>		
+			</div>
 		</div>
 		
 		<footer>
