--- a/invalidLogin.html
+++ b/invalidLogin.html
@@ -101,7 +101,7 @@
 						<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
 						<div class="col-lg-1 col-sm-1 col-xs-1"></div>
 						<div class="col-lg-11 col-sm-11 col-xs-11">
-							<p>Incorrect email or password.</p>
+							<p>Incorrect user name or password.</p>
 							<button class="btn btn-default" onclick="goPreviousPage()">Back to previous page</button>
 						</div>
 						<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
