--- a/recordTechnician.html
+++ b/recordTechnician.html
@@ -63,7 +63,7 @@
 			
 			
 			<h3 id="formHead">Record New Technician</h3>
-			<form class="form-horizontal" action="technicianInput.php" method="post">
+			<form class="form-horizontal" action="technicianInput.php" method="post" onsubmit="return checkHP(this)">
 				<fieldset>
 					<legend>New Technician Details</legend>
 					<div class="container">
@@ -272,13 +272,14 @@
 			x.style.background = "white";
 		}
 		
-		function checkNumber(x)
+		function checkHP(x)
 		{
-			var number = x.fees.value;
+			var hp = x.techTelNo.value;
+			var search = hp.search(/\w/);
 			
-			if(number <=0)
+			if(search > 0)
 			{
-				alert("Please enter a positive number for estimated fees!");
+				alert("Please enter a valid handphone no.!");
 				return false;
 			}
 		}
