--- a/recordTechnician.html
+++ b/recordTechnician.html
@@ -123,7 +123,7 @@
 										<option value="Kelantan"> KELANTAN </option>
 										<option value="Sabah"> SABAH </option>
 										<option value="Sarawak"> SARAWAK </option>
-										<option value="KL"> WP KUALA LUMPUR </option>
+										<option value="WP Kuala Lumpur"> WP KUALA LUMPUR </option>
 										<option value="Labuan"> WP LABUAN </option>
 										<option value="Putrajaya"> WP PUTRAJAYA </option>
 									</select>
