update customer name to user name

--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 							<div class="col-lg-12 col-sm-12 col-xs-12" style="height:20px;"></div>
 							
 							<div class="form-group">
-								<label class="control-label col-lg-2 col-sm-3 col-xs-12" id="formLabel">Customer Name:</label>
+								<label class="control-label col-lg-2 col-sm-3 col-xs-12" id="formLabel">User Name:</label>
 								<div class="col-lg-4 col-sm-4 col-xs-12">
 									<input type="text" name="CustomerName" class="form-control inputbar" id="CustomerName" required 
 										onfocus="focusing(this)" onblur="blurring(this)"/>
